--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_POLYGON_RPC_URL=https://rpc-mumbai.maticvigil.com/
 REACT_APP_SEPOLIA_RPC_URL=https://rpc2.sepolia.org/
 REACT_APP_GOERLI_RPC_URL=https://rpc.ankr.com/eth_goerli
 REACT_APP_MAGIC_API_KEY=pk_live_9C06B3DFF9F2CEA1
+PUBLIC_URL="."
